--- a/map.html
+++ b/map.html
@@ -243,11 +243,11 @@ var GW2T_RESOURCES_DATA = {
 	
 }
 </script>
-<!--<div class="menuBeam"><img src="img/map/completion.png" alt="Map Zones" /><img src="img/ui/ap.png" alt="Daily Achievements" /><img src="img/ui/resource.png" alt="Resource Nodes" /><img src="img/ui/jp.png" alt="Jumping Puzzles" /></div>-->
+
 <div class="cntComposition">
 
+<header class="cntHeader">Map</header>
 
-<h1>Map</h1>
 <header id="headerMap_Zone" class="jsCollapsible"><img src="img/map/completion.png" alt="Map Zones" />Map Zones</header>
 <div>
 <div class="mapZoneList mapLinks">
@@ -311,7 +311,7 @@ var GW2T_RESOURCES_DATA = {
 
 <header id="headerMap_Daily" class="jsCollapsible"><img src="img/ui/ap.png" alt="Daily Achievements" />Daily Achievements</header>
 <div>
-<p>These are some places to complete dailies quickly; the top of each list should be the fastest. Most of the places are based on the <a href="http://wiki.guildwars2.com/wiki/Daily">wiki</a>; if you know a good spot, please <a href="http://forum.renaka.com/topic/5476238/">share it</a>.</p>
+<p>These are some places to complete dailies quickly; the top of each list should be the fastest. Most of the places are based on the <a href="http://wiki.guildwars2.com/wiki/Daily">wiki</a>; if you know a good spot, please <a href="http://forum.renaka.com/topic/5476238/">share it</a>. Click a daily icon on the map to zoom in/out.</p>
 <button id="mapToggle_Daily" class="cssRight">Toggle Icons</button>
 
 <div class="mapDailyLists mapLinks">
@@ -431,14 +431,14 @@ You may need to complete the heart before you can purchase.
 <div class="mapLegendLine" style="border-bottom: 2px solid lime"></div> <strong>Exact</strong> location of that node<br />
 <div class="mapLegendLine" style="border-bottom: 2px dotted lime"></div> <strong>Approximate</strong> vicinity of that node<br />
 <div class="mapLegendLine" style="border-bottom: 2px dashed lime"></div> <strong>Map</strong> has that resource (not a node)<br />
-Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in about 2 hours. You can use alts to re-gather any node. More <a href="http://wiki.guildwars2.com/wiki/Resource#Harvesting">plants</a> on the wiki.<br />
+Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in about 2 hours. You can use alts to re-gather any node. More <a href="http://wiki.guildwars2.com/wiki/Resource#Harvesting">plants</a> on the wiki. Click a resource node icon on the map to zoom in/out.<br />
 <br />
 </div>
 
 
 <header id="headerMap_JP" class="jsCollapsible"><img src="img/ui/jp.png" alt="Jumping Puzzles" />Jumping Puzzles</header>
 <div>
-<p>The map pin refers to the JP's entrance. JPs in each list are sorted by location. Click on a checkbox here or a JP icon on the map to auto-save the checklist. Double click a JP icon to zoom in/out.</p>
+<p>The JP map icons point to the entrance. Click on a checkbox here or a JP icon on the map to auto-save the checklist. Double click a JP icon to zoom in/out.<br />Links: [Y]outube [W]iki.</p>
 <button id="mapToggle_JP" class="cssRight">Toggle Icons</button>
 
 <div class="mapLinks">
