Changed side menu animation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>GW2Timer - World Boss Timers and Daily Map Guide for Guild Wars 2</title>
 	<meta charset="utf-8" />
 	<meta name="robots" content="index, follow, noarchive" />
-	<meta name="description" content="Guild Wars 2 timers and clock for world boss meta events, with walkthroughs and daily achievement guide." />
+	<meta name="description" content="Guild Wars 2 timers and clock for world boss meta events, with walkthroughs, daily achievements, jumping puzzles, and gathering nodes map." />
 	<meta name="google-site-verification" content="hPcBd74DxlBzpTu6wO6DkIcOVFLu9SOMT-GQ1MI3fbg" />
 
 	<!-- Stylesheets -->
