--- a/map.html
+++ b/map.html
@@ -360,6 +360,7 @@ WvW North Camp also has concentrated critters.
 	<dt data-coord="[12140, 13462]">Godslost Swamp</dt><dd>Queensdale ravens and frogs (high concentration at the house porch)</dd>
 	<dt data-coord="[15613, 17626]">Grand Barrier Isle</dt><dd>Bloodtide crows (fast respawn)</dd>
 	<dt data-coord="[22538, 14438]">Hangrammr Climb</dt><dd>Wayfarer ravens</dd>
+	<dt data-coord="[5901, 21550]">Idea Incubation Lab</dt><dd>Rata Sum lightning bugs occasionally scutter in a large group</dd>
 </dl>
 <br />
 
